--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ url('https://fonts.googleapis.com/css?family=Raleway:300,400,700,900');
 
 *{
 	box-sizing: border-box;
+	transition: all ease-in-out 250ms;
 }
 
 body {
@@ -19,19 +20,92 @@ img{
 .container{
 	width: 95%;
 	margin: 0 auto;
+	max-width: 70em;
 }
 
+.clearfix:after,
+section:after,
+footer:after {
+	content: '';
+	display: block;
+	clear: both;
+}
+/*columm system*/
+
+
+[class^=col-]: first-child {
+	padding-left: 0;
+	margin-top:0; 
+
+}
+
+.col-1{
+	width: 33.33334%;
+	float: left;
+}
+
+@media (min-width: 40rem){
+
+[class^=col-]{
+	float: left;
+	padding: 0 .5em;
+	margin-top: 1em;
+}
+[class^=col-]: first-child {
+	padding-left: 0;
+
+}
+
+[class^=col-]: last-child {
+	padding-right: 0;
+
+}
+.col-3{
+	width: 50%;
+}
+.col-1{
+	width: 50%;
+	float: left;
+}
+
+}
 /* typography*/
 
 .title{
 	font-size: 2.5rem;
-	margin-bottom: 1.5em; 
+	margin-bottom: 1em; 
+	font-weight: 900;
+	margin-top: 1em;
 }
 
 .title span{
 	font-weight: 300;
 	display: block;
 	font-size: .9em;
+}
+ .title-cta{
+ 	font-size: 2.5rem;
+	margin-bottom: 1em; 
+	font-weight: 900;
+	margin-top: 0.2em;
+ }
+
+.title-cta span{
+	font-weight: 300;
+	display: block;
+	font-size: .9em;
+}
+
+.unstyled-list{
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+h1{
+	font-weight: 300;
+	font-size: 1.7rem;
+	margin-top: 1em;
+
 }
 
 @media (min-width: 60rem){
@@ -63,10 +137,64 @@ img{
 	color: #232323;
 
 }
+.button-work{
+	font-size: 1.5rem;
+	text-decoration: none;
+	text-transform: uppercase;
+	border-width: 2px;
+	border-style: solid;
+	padding: .5em 1.75em;
+	display: inline-block;
+}
+
+
+.button-work{
+	color: #232323;
+	border-color: #232323;
+}
+
+.button-work:hover,
+.button-work:focus {
+	background: #232323;
+	color: #00ff6c;
+
+}
+
+.button-port{
+	font-weight: 700;
+	font-size: 1em;
+}
+
+.button-port{
+	color: #00ff6c;
+	border-color: #00ff6c;
+}
+
+.button-port{
+	font-size: 1.5em;
+	font-weight: 700;
+	font-size: 1.5rem;
+	text-decoration: none;
+	text-transform: uppercase;
+	border-width: 2px;
+	border-style: solid;
+	padding: .5em 1.75em;
+	display: inline-block;
+
+}
+
+.button-port:hover,
+.button-port:focus{
+	background: #00ff6c;
+	color: #232323;
+}
 
 @media (min-width: 60rem){
 	.button {
 		font-size: 1.5rem;
+	}
+	.button-port{
+		font-size: 0.8rem;
 	}
 }
 
@@ -126,6 +254,110 @@ nav a:focus{
 		height: 100vh;
 		padding-top: 35vh;
 	}
+}
+
+.home-about-textbox{
+		background-color: #232323;
+		padding: 3em;
+		width: 98.7vw;
+		margin-left: -3%;
+		outline: 2px solid #00ff6c;
+		outline-offset: -2.5em;
+		color: #FFF;
+		position: relative;
+}
+
+.home-about-textbox h1{
+	color: #00ff6c;
+	position: absolute;
+	left:50%;
+	transform: translateX(-50%);
+	top: -.4em;
+	background: #232323;
+	padding: 0 .1em;
+	
+}
+
+@media (min-width: 25rem){
+	h1{
+		font-size: 2rem;
+	}
+	.home-about.textbox h1{
+		top: .6em;
+	}
+}
+
+/* portfolio */
+
+.portfolio{
+	margin: 0;
+
+}
+
+.port-desc{
+	position: absolute;
+	z-index: 100;
+	bottom: 0em;
+	left: 0em;
+	right: 0em;
+	color: white;
+	background: rgba(0,0,0,.75);
+	padding-bottom: 1em;
+	overflow: hidden;
+
+}
+
+.port-item{
+	position: relative;
+	margin: 0;
+
+
+}
+
+.port-desc p{
+	margin:0.2;
+
+}
+
+@media (min-width: 60rem){
+	.port-item{
+		width: 33.3333333;
+		overflow: hidden;
+	}
+	.port-desc{
+		transform: translateY(50%);
+	}
+
+}
+@media (min-width: 37rem){
+	.port-item{
+		width: 50%;
+		float: left;
+		overflow: hidden;
+
+	}
+
+	.port-item:hover .port-desc{
+		transform: translateY(0%);
+	}
+}
+
+/* cta */
+
+.cta{
+	background-color: #00ff6c;
+	padding: 3em 0;
+	
+}
+
+/* footer */
+
+footer{
+	background: #232323;
+	color: #FFF;
+	text-align: left;
+	padding: 5em 0;
+
 }
 
 
